/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    // Use JaCoCo for Code Coverage
    id 'jacoco'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // ----- FOR TESTING -----
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    // Mockito (for mockning)
    testImplementation 'org.mockito:mockito-core:5.11.0'

    // Mockito + JUnit 5 integration (for using @ExtendWith(MockitoExtension.class))
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ----- FOR THE APPLICATION -----
    // This dependency is used by the application.
    implementation libs.guava
}

run {
    standardInput = System.in
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    testLogging {
        events "PASSED", "FAILED", "SKIPPED", "STANDARD_ERROR", "STANDARD_OUT"
        showStandardStreams = true
    }
    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
}

application {
    // Define the main class for the application.
    mainClass = 'com.dicegame.Main'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
